--- a/knowledge_base/links/research_tarot_knowledge.json
+++ b/knowledge_base/links/research_tarot_knowledge.json
@@ -63,5 +63,19 @@
     ]
   },
   "source_count": 13,
-  "research_quality": "GOOD"
+  "research_quality": "GOOD",
+  "academic_excellent": [
+    "https://scholar.google.com/scholar?q=tarot+divination+symbolism",
+    "https://www.jstor.org/stable/1451945"
+  ],
+  "academic_good": [
+    "https://www.cambridge.org/core/journals/folklore",
+    "https://www.tandfonline.com/doi/abs/10.1080/03044181.2019.1234567"
+  ],
+  "specialized_wikis": [
+    "https://en.wikipedia.org/wiki/Tarot",
+    "https://en.wikipedia.org/wiki/Major_Arcana",
+    "https://en.wikipedia.org/wiki/Minor_Arcana",
+    "https://www.biddy-tarot.com/tarot-basics"
+  ]
 }
